updated ctrl-shift-[ shortcut, changed name of treat-as-text topic

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/editorcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/editorcuts.html
@@ -455,7 +455,7 @@ the insertion point is on.</td>
 <td>Finds matching bracket.</td>
 </tr>
 <tr>
-<td valign="top">Ctrl-Shift-B</td>
+<td valign="top">Ctrl-Shift-[</td>
 <td>Selects block between brackets when insertion point is immediately
 in front of the open bracket.</td>
 </tr>
