Added registered trademark for UNIX.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/alternate_browser.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/alternate_browser.html
@@ -30,7 +30,7 @@ typically stored in the <tt>modules/docs</tt> directory in your installation dir
 in your installation directory and list the JAR files in that directory.
 </li>
 <li>Use the jar command-line utility to unpack the JAR file in which you
-are interested.  On Microsoft Windows and UNIX systems, the command is
+are interested.  On Microsoft Windows systems and UNIX<sup>&#174</sup> systems, the command is
 as follows:
 <p>
 <tt>jar xf </tt><i>jar-file</i>
