--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
@@ -21,7 +21,9 @@ Shortcuts for commands available from the main menu and other general commands:
 <li><a href="#project">Project Menu</a>
 <li><a href="#build">Build Menu</a>
 <li><a href="#debug">Debug Menu</a>
+<li><a href="#tools">Tools Menu</a>
 <li><a href="#window">Window Menu</a>
+<li><a href="#help">Help Menu</a>
 </ul></p>
 
 <a name="menus"></a>
@@ -259,6 +261,8 @@ is closed.</td>
 </tr>
 </table></p>
 
+
+
 <a name="project"></a>
 <h3>Project Menu</h3>
 <p>
@@ -344,18 +348,6 @@ last compile.</td>
 <td valign="top">Compiles all files within the selected folder
 regardless of whether they have changed since the last compile.</td> 
 </tr>
-<!--<tr>
-<td valign="top">F12</td>
-<td valign="top">Clean</td>
-<td valign="top">Remove obsolete and extraneous files of the selected
-node.</td>
-</tr>
-<tr>
-<td valign="top">Shift-F12</td>
-<td valign="top">Clean All</td>
-<td valign="top">Remove obsolete and extraneous files of the selected
-node and its subnodes.</td> 
-</tr>-->
 <tr>
 <td valign="top">Alt-Shift-C</td>
 <td valign="top">Stop Compile</td>
@@ -470,7 +462,7 @@ exception, or method.</td>
 </tr>
 </table></p>
 
-<a name="window"></a>
+<a name="tools"></a>
 <h3>Tools Menu</h3>
 <p>
 <table border="1" summary="This table displays keyboard shortcuts for Tools menu commands.">
@@ -509,10 +501,24 @@ the selected class in the filesystem.</td>
 <tr>
 <td valign="top">Alt-left</td>
 <td valign="top">Previous View</td>
-<td valign="top">Displays the previous file.</td>
+<td valign="top">Displays the previous tab in the current window..</td>
 </tr>
 
 </table></p>
+
+
+<table>
+<tr>
+<td valign="top"><img src="../images/tip.gif" alt="Tip"></td>
+<td valign=top align=left>
+If you want to cycle through windows that are outside of your main IDE desktop frame, you can use 
+shortcuts provided by your system's window manager. For example, on Microsoft Windows systems, you 
+can press Alt-Tab to cycle through all open windows.
+</td>
+</tr></table>
+
+
+<a name="help"></a>
 <h3>Help Menu</h3>
 <p>
 <table border="1" summary="This table displays keyboard shortcuts for Help menu commands.">
@@ -527,6 +533,8 @@ the selected class in the filesystem.</td>
 <td valign="top">Displays the JavaHelp viewer with all installed help sets.</td>
 </tr>
 </table></p>
+
+
 <hr>
 <small><a href="../credits.html">Legal Notices</a></small>
 
