--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/proxy.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/proxy.html
@@ -16,13 +16,15 @@
 need to configure the IDE with your proxy settings.</p>
 <p><b>To use an HTTP proxy:</b></p>
 <ol>
-<li>From the main window, choose Tools <img src="../images/arrow.gif" alt="and choose">&nbsp;Options.</li>
-<li>In the Options window, expand IDE Configuration <img src="../images/expand.gif" alt="and expand">&nbsp;System.
+<li>From the main window, choose Tools <img src="../images/arrow.gif"
+alt="and choose">&nbsp;Setup Wizard.</li>
+<li>In the wizard, select the Use HTTP Proxy Server checkbox.
 </li>
-<li>Select the System Settings Node.</li>
-<li>Type the proxy host name in the Proxy Host field and the port number in the Proxy Port field.</li>
-<li>Set the Use Proxy property to True. </li>
+<li>Type the proxy host name in the Proxy Server Name field and the port number
+in the Port field.</li>
+<li>Click Finish.</li>
 </ol>
+
 
 <p>To run the IDE using a SOCKS proxy, you must pass the SOCKS proxy host and proxy port parameters to the JVM software
 when you start the IDE. On Microsoft Windows machines, use the <tt>ide.cfg</tt> file to pass the parameters. 
