--- a/xml.core/src/org/netbeans/modules/xml/dtd/grammar/package.html
+++ b/xml.core/src/org/netbeans/modules/xml/dtd/grammar/package.html
@@ -19,7 +19,7 @@ these also because it does not support document context.
 This simplification is same as for HTML grammar provided
 by editor module. 
 <p>On the other hand there it prepared class {@link ContentModel}
-that handles it. It is ready to be inntegrated.
+that handles it. It is ready to be integrated.
 
 </BODY>
 </HTML>
