Corrected error in string  to set SOCKS proxy

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/proxy.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/proxy.html
@@ -35,7 +35,7 @@ On UNIX and Linux machines, you can write a wrapper shell script.</p>
 <li>In the IDE's installation directory, expand the <tt>bin</tt> directory.</li>
 <li>If an <tt>ide.cfg</tt> file is not there, create one.</li>
 <li>Open <tt>ide.cfg</tt> in a text editor and type:
-<p><tt>-J-DsocksProxyHost=</tt><i>SOCKS-SERVER</i> <tt>-DsocksProxyPort=1080</tt></p>
+<p><tt>-J-DsocksProxyHost=</tt><i>SOCKS-SERVER</i> <tt>-J-DsocksProxyPort=1080</tt></p>
 <p>
 For <i>SOCKS-SERVER,</i> use the host name of your SOCKS proxy.
 </p></li>
@@ -50,7 +50,7 @@ when running on a UNIX or Linux machine:</b></p>
 <li>Change directory to your <i>IDE-installation</i><tt>/bin</tt> directory.</li>
 <li>Create a new shell script file.</li>
 <li>Open the new shell file in a text editor and type: 
-<p><tt>runide.sh -J-DsocksProxyHost=</tt><i>SOCKS-SERVER</i> <tt>-DsocksProxyPort=1080</tt></p>
+<p><tt>runide.sh -J-DsocksProxyHost=</tt><i>SOCKS-SERVER</i> <tt>-J-DsocksProxyPort=1080</tt></p>
 <p>
 For <i>SOCKS-SERVER,</i> use the host name of your SOCKS proxy.
 </p></li>
