Ran pending.html and all debugger files through an HTML checker.  Fixed all tagging errors.  Am trying to find the root of the display problems on Windows

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/pending.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/pending.html
@@ -21,7 +21,7 @@ To find information related to your question, try using the Help Window
 navigation aids described in the following table.
 </p>
 
-<table valign="top" border="1" cellpadding="5" cellspacing="0">
+<table border="1" cellpadding="5" cellspacing="0">
 <tr>
 <th scope="col" align="left">Tab</th>
 <th scope="col" align="left">Description</th>
