Ran accessibility section through HTML checker

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/alternate_browser.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/alternate_browser.html
@@ -53,14 +53,13 @@ current directory.  The directory structure is reproduced according to the packa
 Navigate to the files you just extracted.  For example, to view the core online help, navigate to  <i>install-directory</i><tt>/modules/docs/org/netbeans/modules/usersguide</tt>.  The following table 
 provides pointers 
 on where to start browsing the core help.
-</p>
 </li>
 </ol>
 <table border="1" cellpadding="5" cellspacing="0">
 <tr>
 <th align="left" scope="col" valign="top"><b>Topical information</b></th>
 <th align="left" scope="col" valign="top"><b>File Within 
-<br><tt>modules/docs/org/netbeans/modules/usersguide</code</b></th>
+<br><tt>modules/docs/org/netbeans/modules/usersguide</tt></b></th>
 </tr>
 <tr>
 <td valign="top">Getting Started</td>
