--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/proxy.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/proxy.html
@@ -24,13 +24,12 @@ alt="and choose">&nbsp;Setup Wizard.</li>
 in the Port field.</li>
 <li>Click Finish.</li>
 </ol>
-
-
+<p><b>To use a SOCKS proxy:</b></p>
 <p>To run the IDE using a SOCKS proxy, you must pass the SOCKS proxy host and proxy port parameters to the JVM software
 when you start the IDE. On Microsoft Windows machines, use the <tt>ide.cfg</tt> file to pass the parameters. 
 On UNIX and Linux machines, you can write a wrapper shell script.</p>
-
-<p><b>To use a SOCKS proxy when running on a Microsoft Windows machine:</b></p>
+<p><b>On a Microsoft Windows machine:</b>
+</p>
 <ol>
 <li>In the IDE's installation directory, expand the <tt>bin</tt> directory.</li>
 <li>If an <tt>ide.cfg</tt> file is not there, create one.</li>
@@ -44,8 +43,7 @@ For <i>SOCKS-SERVER,</i> use the host name of your SOCKS proxy.
 
 
 
-<p><b>To use a SOCKS proxy 
-when running on a UNIX or Linux machine:</b></p>
+<p><b>On a UNIX or Linux machine:</b></p>
 <ol>
 <li>Change directory to your <i>IDE-installation</i><tt>/bin</tt> directory.</li>
 <li>Create a new shell script file.</li>
