Added some See Also links; added some clarifying info.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
@@ -12,37 +12,41 @@
 
 <h2>Keyboard Shortcuts</h2>
 <p>
-You can use the many shortcuts provided by the IDE or you can change
-them to suit your needs. This section contains the keyboard shortcuts
-for various operations in the IDE and instructions how to edit them.
+A keyboard shortcut is a sequence of keys (for example, Control-Tab) that
+activates a command or moves the input focus to another component.
 </p>
 
 <p>
-Follow these links for Menu and Editor shortcuts:
-</p>
-
-<blockquote>
+The IDE provides the following keyboard shortcuts:
+<ul>
+<li>
 <a href="menucuts.html">Menu Shortcuts</a>
-<br></br>
+</li>
+<li>
 <a href="editorcuts.html">Editor Shortcuts</a>
-</blockquote>
-
-<p>
-For help viewer shortcuts, see:
+</li>
+<li>
+<a href="jhshortcuts.html">Help Viewer Shortcuts</a>
+</li>
+</ul>
 </p>
 
-<blockquote>
-<a href="jhshortcuts.html">JavaHelp Shortcuts</a>
-</blockquote>
-
 
 <p>
-For information on setting your own editor shortcuts, see:
-<blockquote>
-<a href="../editing/configuring/settingkeybdshorts.html">Setting Keyboard Shortcuts for the Source Editor</a>
-<br></br>
-<a href="../editing/configuring/keybindings.html">Key Bindings Property Editor</a>
-</blockquote>
+To set or change keyboard shortcuts, see:
+<ul>
+<li>
+<a href="menucuts-setting.html">Setting Menu Shortcuts</a>
+</li>
+<li>
+<a href="../editing/configuring/settingkeybdshorts.html">
+Setting Keyboard Shortcuts for the Source Editor</a>
+</li>
+<li>
+<a href="../editing/configuring/keybindings.html">
+Key Bindings Property Editor</a>
+</li>
+</ul>
 </p>
 
 <hr>
