--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts-setting.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts-setting.html
@@ -14,7 +14,7 @@
 <p>
 You can specify your own keyboard shortcuts for menu commands in the IDE.</p>
 
-<p><b>To add a keyboard shortcut for a menu command:</b>
+<p><b>To add or change a keyboard shortcut for a menu command:</b>
 </p>
 <ol>
 <li>
@@ -36,7 +36,7 @@ the selected action.
 As you press the key sequence, the correct syntax for that sequence
 automatically appears in the text field.  For example, if you press the
 Backspace key, the word "Backspace" appears. If you simultaneously hold down
-the Alt key, the Control key, and the J key, "Ctrl+Alt+J" appears.
+the Alt key, the Control key, and the J key, "Alt+Ctrl+J" appears.
 </p>
 </li>
 </ol>
