--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
@@ -12,7 +12,8 @@
 
 <h2>Menu Shortcuts</h2>
 <p>
-Shortcuts for commands available from the main menu and other general commands:
+There are keyboard shortcuts available to activate the following 
+menu commands and other general commands:
 <ul>
 <li><a href="#menus">Menus</a>
 <li><a href="#file">File Menu</a>
@@ -510,7 +511,7 @@ the selected class in the filesystem.</td>
 <table>
 <tr>
 <td valign="top"><img src="../images/tip.gif" alt="Tip"></td>
-<td valign=top align=left>
+<td valign="top" align="left">
 If you want to cycle through windows that are outside of your main IDE desktop frame, you can use 
 shortcuts provided by your system's window manager. For example, on Microsoft Windows systems, you 
 can press Alt-Tab to cycle through all open windows.
@@ -533,6 +534,23 @@ can press Alt-Tab to cycle through all open windows.
 <td valign="top">Displays the JavaHelp viewer with all installed help sets.</td>
 </tr>
 </table></p>
+
+<table>
+<tr>
+<th colspan=2 align=left>See also</th>
+</tr>
+<tr>
+<td width="23"></td>
+<td>
+<a href="menucuts-setting.html">Setting Menu Shortcuts</a>
+<br>
+<a href="../shortcuts/editorcuts.html">Editor Shortcuts</a>
+<br>
+<a href="../shortcuts/jhshortcuts.html">Help Viewer Shortcuts</a>
+
+</td>
+</tr>
+</table>
 
 
 <hr>
