Added some clarifying language.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/jhshortcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/jhshortcuts.html
@@ -36,9 +36,10 @@ If you cannot tell where the keyboard focus is, press Ctrl-F1.  If
 the focus is on the Previous, Next, Print, or Page Setup button, the
 alternate text for the button that has the focus is displayed 
 as a tool tip.  If keyboard focus
-is not on a button, press Ctrl-Tab and Ctrl-F1 
+is not on one of those buttons, press Ctrl-Tab and Ctrl-F1 
 until the alternate text 
-for the Previous, Next, Print, or Page Setup button is displayed.
+for one of the buttons is displayed, thereby showing you where the
+keyboard focus is.
 </td>
 </tr></table>
 
