Javadoc comment fixed.

--- a/jellytools/src/org/netbeans/jellytools/properties/package.html
+++ b/jellytools/src/org/netbeans/jellytools/properties/package.html
@@ -36,7 +36,8 @@ box appears. That means properties in IDE can be classified into two categories:
   Both these types become editable by mouse click or enter keystroke. Also
  both these types can have associated custom editor which can be invoked
 by "..." button press.<br>
- You can extend {@link TextFieldProperty} or {@link ComboBoxProperty}, if 
+ You can extend {@link org.netbeans.jellytools.properties.TextFieldProperty TextFieldProperty}
+or {@link org.netbeans.jellytools.properties.ComboBoxProperty ComboBoxProperty}, if 
 you want to create your specific property. Some common properties are already 
 created in this package (ColorProperty, PointProperty, ...).<br>
  Properties can be used the following way:<br>
