added link lists at the top of pages

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/bypassproxy.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/bypassproxy.html
@@ -12,6 +12,8 @@
 <BODY>
 
 <h2>Accessing Local Files Through a Proxy</h2>
+<p>
+<small><a href="#seealso">See Also</a></small></p>
 <p>When you set the IDE to use a proxy, your Internet browser may attempt to route all files through the proxy, 
   including local files. This results in a File Not Found error when you try to 
   open an HTML file or applet in the IDE's external browser.
@@ -40,7 +42,7 @@ To resolve this problem, add <tt>localhost</tt> and your machine name to the
 </ol>
 <table>
 <tr>
-<th colspan="2" align="left">See also</th>
+<th colspan="2" align="left"><a name="seealso">See Also</a></th>
 </tr>
 <tr>
 <td width="23"></td>
@@ -50,6 +52,10 @@ To resolve this problem, add <tt>localhost</tt> and your machine name to the
 </table>
 <hr>
 <small><a href="../credits.html">Legal Notices</a></small>
-
+<table border="0" cellpadding="150">
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+</table>
 </body>
 </html>
