--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/default.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/default.html
@@ -13,6 +13,8 @@
 
 <h2>Specifying the Default Web Browser</h2>
 <p>
+<small><a href="#seealso">See Also</a></small></p>
+<p>
 You can configure the IDE to use either an external web browser or
 the internal Swing HTML web.
 Both types of browsers enable you to view external and 
@@ -55,7 +57,7 @@ From the main menu, choose Tools <img src="../images/arrow.gif" alt="and choose"
 </ol>
 <table>
 <tr>
-<th colspan="2" align="left">See also</th>
+<th colspan="2" align="left"><a name="seealso">See Also</a></th>
 </tr>
 <tr>
 <td width="23"></td>
@@ -71,6 +73,10 @@ From the main menu, choose Tools <img src="../images/arrow.gif" alt="and choose"
 </table>
 <hr>
 <small><a href="../credits.html">Legal Notices</a></small>
-
+<table border="0" cellpadding="150">
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+</table>
 </body>
 </html>
