--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/home_page.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/home_page.html
@@ -25,7 +25,7 @@ Select the System Settings node.
 </ol>
 <table>
 <tr>
-<th colspan="2" align="left">See also</th>
+<th colspan="2" align="left">See Also</th>
 </tr>
 <tr>
 <td width="23"></td>
