--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/proxy.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/proxy.html
@@ -12,6 +12,8 @@
 <BODY>
 
 <h2>Setting a Proxy</h2>
+<p>
+<small><a href="#seealso">See Also</a></small></p>
 <p>If you want to use the Update Center or access the Internet through the IDE, but your system is behind a firewall or you use a proxy server, you 
 need to configure the IDE with your proxy settings.</p>
 <p><b>To use an HTTP proxy:</b></p>
@@ -61,7 +63,7 @@ For <i>SOCKS-SERVER,</i> use the host name of your SOCKS proxy.
 
 <table>
 <tr>
-<th colspan="2" align="left">See also</th>
+<th colspan="2" align="left"><a name="seealso">See Also</a></th>
 </tr>
 <tr>
 <td width="23"></td>
@@ -71,6 +73,11 @@ For <i>SOCKS-SERVER,</i> use the host name of your SOCKS proxy.
 </table>
 <hr>
 <small><a href="../credits.html">Legal Notices</a></small>
+<table border="0" cellpadding="150">
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+</table>
 
 </body>
 </html>
