--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
@@ -33,7 +33,7 @@ The IDE provides the following keyboard shortcuts:
 
 
 <p>
-To set or change keyboard shortcuts, see:
+To set or change keyboard shortcuts:
 <ul>
 <li>
 <a href="menucuts-setting.html">Setting Menu Shortcuts</a>
