--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts-setting.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts-setting.html
@@ -60,8 +60,9 @@ the selected action.</li>
 </ol>
 
 <p>
-Click the following link for instructions on setting keyboard shortcuts for the Source Editor.
-<blockquote><a href="../editing/configuring/settingkeybdshorts.html">Setting Keyboard Shortcuts for the Source Editor</a></blockquote>
+For setting keyboard shortcuts for the Source Editor, see 
+<a href="../editing/configuring/settingkeybdshorts.html">
+Setting Keyboard Shortcuts for the Source Editor</a>.
 </p>
 
 
