--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
@@ -11,9 +11,10 @@
 <body>
 
 <h2>Menu Shortcuts</h2>
-<p>
+<P>
 There are keyboard shortcuts available to activate the following 
 menu commands and other general commands:
+</P>
 <ul>
 <li><a href="#menus">Menus</a>
 <li><a href="#file">File Menu</a>
@@ -25,11 +26,10 @@ menu commands and other general commands:
 <li><a href="#tools">Tools Menu</a>
 <li><a href="#window">Window Menu</a>
 <li><a href="#help">Help Menu</a>
-</ul></p>
+</ul>
 
 <a name="menus"></a>
 <h3>Menus</h3>
-<p>
 <table border="1" summary="This table displays keyboard shortcuts for opening menus in the IDE.">
 <tr>
 <th align="left" scope="col">Keys</th>
@@ -83,11 +83,10 @@ menu commands and other general commands:
 <td valign="top">Shift-F10</td>
 <td>Opens the contextual menu for the current window or node.</td>
 </tr>
-</table></p>
+</table>
 
 <a name="file"></a>
 <h3>File Menu</h3>
-<p>
 <table border="1" summary="This table displays keyboard shortcuts for File menu commands.">
 <tr>
 <th align="left" scope="col">Keys</th>
@@ -114,11 +113,10 @@ menu commands and other general commands:
 <td>Print</td>
 <td>Prints the current file.</td>
 </tr>
-</table></p>
+</table>
 
 <a name="edit"></a>
 <h3>Edit Menu</h3>
-<p>
 <table border="1" summary="This table displays keyboard shortcuts for Edit menu commands.">
 <tr>
 <th align="left" scope="col">Keys</th>
@@ -172,11 +170,10 @@ string specified.</td>
 <td valign="top">Goto</td>
 <td valign="top">Goes to the line specified in the file.</td>
 </tr>
-</table></p>
+</table>
 
 <a name="view"></a>
 <h3>View Menu</h3>
-<p>
 <table border="1" summary="This table displays keyboard shortcuts for View menu commands.">
 <tr>
 <th align="left" scope="col">Keys</th>
@@ -260,13 +257,12 @@ is closed.</td>
 <td valign="top">Open Workspace Explorer</td>
 <td valign="top">Opens the Workspace Explorer, which enables you to choose between workspaces.</td>
 </tr>
-</table></p>
+</table>
 
 
 
 <a name="project"></a>
 <h3>Project Menu</h3>
-<p>
 <table border="1" summary="This table displays keyboard shortcuts for Project menu commands.">
 <tr>
 <th align="left" scope="col">Keys</th>
@@ -312,11 +308,11 @@ Debugging workspace.</td>
 <td valign="top">Ctrl-Shift-O</td>
 <td valign="top">Open Project</td>
 <td valign="top">Enables you to switch to a different IDE project.</td> 
-</tr></table></p>
+</tr>
+</table>
 
 <a name="build"></a>
 <h3>Build Menu</h3>
-<p>
 <table border="1" summary="This table displays keyboard shortcuts for Build menu commands.">
 <tr>
 <th align="left" scope="col">Keys</th>
@@ -371,11 +367,10 @@ the previous build error.</td>
 <td valign="top">Execute</td>
 <td valign="top">Run the current program.</td>
 </tr>
-</table></p>
+</table>
 
 <a name="debug"></a>
 <h3>Debug Menu</h3>
-<p>
 <table border="1" summary="This table displays keyboard shortcuts for Debug menu commands.">
 <tr>
 <th align="left" scope="col">Keys</th>
@@ -461,11 +456,10 @@ exception, or method.</td>
 <td valign="top">Debugger Window</td>
 <td valign="top">Opens the Debugger window.</td>
 </tr>
-</table></p>
+</table>
 
 <a name="tools"></a>
 <h3>Tools Menu</h3>
-<p>
 <table border="1" summary="This table displays keyboard shortcuts for Tools menu commands.">
 <tr>
 <th align="left" scope="col">Keys</th>
@@ -483,11 +477,10 @@ the selected class in the filesystem.</td>
 <td valign="top">Insert Internationalized String</td>
 <td valign="top">Enables you to add an internationalization string as you create the source.</td>
 </tr>
-</table></p>
+</table>
 
 <a name="window"></a>
 <h3>Window Menu</h3>
-<p>
 <table border="1" summary="This table displays keyboard shortcuts for Window menu commands.">
 <tr>
 <th align="left" scope="col">Keys</th>
@@ -505,7 +498,7 @@ the selected class in the filesystem.</td>
 <td valign="top">Displays the previous tab in the current window..</td>
 </tr>
 
-</table></p>
+</table>
 
 
 <table>
@@ -521,7 +514,6 @@ can press Alt-Tab to cycle through all open windows.
 
 <a name="help"></a>
 <h3>Help Menu</h3>
-<p>
 <table border="1" summary="This table displays keyboard shortcuts for Help menu commands.">
 <tr>
 <th align="left" scope="col">Keys</th>
@@ -533,7 +525,7 @@ can press Alt-Tab to cycle through all open windows.
 <td valign="top">Help</td>
 <td valign="top">Displays the JavaHelp viewer with all installed help sets.</td>
 </tr>
-</table></p>
+</table>
 
 <table>
 <tr>
