Added more info to intro.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
@@ -12,9 +12,11 @@
 
 <h2>Keyboard Shortcuts</h2>
 <p>
-A keyboard shortcut is a sequence of keys (for example, Control-Tab) that
-activates a command or moves the input focus to another component.
-</p>
+Keyboard shortcuts are keystroke combinations consisting of a
+modifier key and a character key, for example, Control-Z.  
+Keyboard shortcuts enable you to activate a command and move the
+input focus (designate the active UI component) by using the keyboard 
+instead of the mouse.</P>
 
 <p>
 The IDE provides the following keyboard shortcuts:
