Added See Also link.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_options.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_options.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="../ide.css" type="text/css"></head>
 <body>
 <h2>Using the Options Window</h2>
+<p><small><a href="#seealso">See Also</a></small></p>
 
 <p>You can use the Options window to change any of the IDE's configurable settings. You can apply 
 specific settings globally or by project.</p>
@@ -151,7 +152,7 @@ level.</p></li>
 
 <table>
 <tr>
-<th colspan=2 align=left>See also</th>
+<th colspan=2 align=left><a name="seealso">See Also</a></th>
 </tr>
 <tr>
 <td width="23"></td>
