--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/system_settings.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/system_settings.html
@@ -12,6 +12,7 @@
 <BODY>
 
 <h2>Configuring System Settings</h2>
+<p><small><a href="#seealso">See Also</a></small></p>
 
 <p>System settings allow you to set a wide range of general
 properties in the IDE.  For example, through the System Settings
@@ -144,7 +145,7 @@ for more information.
 
 <table>
 <tr>
-<th colspan=2 align=left>See also</th>
+<th colspan=2 align=left><a name="seealso">See Also</a></th>
 </tr>
 <tr>
 <td width="23">
