--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/jhshortcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/jhshortcuts.html
@@ -12,6 +12,7 @@
 <h2>
 Help Viewer Shortcuts
 </h2>
+<p><small><a href="#seealso">See Also</a></small></p>
 <p>
 The IDE uses the JavaHelp<sup><small>TM</small></sup>
 system help viewer to display the online help.
@@ -170,7 +171,7 @@ is in the content pane or in the navigation pane.
 
 <table>
 <tr>
-<th colspan=2 align=left>See also</th>
+<th colspan=2 align=left><a name="seealso">See Also</a></th>
 </tr>
 <tr>
 <td width="23"></td>
