--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts-setting.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts-setting.html
@@ -11,6 +11,7 @@
 <body>
 
 <h2>Setting Menu Shortcuts</h2>
+<p><small><a href="#seealso">See Also</a></small></p>
 <p>
 You can specify your own keyboard shortcuts for menu commands in the IDE.</p>
 
@@ -68,7 +69,7 @@ the selected action.</li>
 
 <table>
 <tr>
-<th colspan=2 align=left>See also</th>
+<th colspan=2 align=left><a name="seealso">See Also</a></th>
 </tr>
 <tr>
 <td width="23"></td>
