--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
@@ -11,6 +11,7 @@
 <body>
 
 <h2>Menu Shortcuts</h2>
+<p><small><a href="#seealso">See Also</a></small></p>
 <P>
 There are keyboard shortcuts available to activate the following 
 menu commands and other general commands:
@@ -529,7 +530,7 @@ can press Alt-Tab to cycle through all open windows.
 
 <table>
 <tr>
-<th colspan=2 align=left>See also</th>
+<th colspan=2 align=left><a name="seealso">See Also</a></th>
 </tr>
 <tr>
 <td width="23"></td>
