re-categorized a pair of bracket-oriented keyboard shortcuts that were in the wrong place.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/editorcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/editorcuts.html
@@ -53,6 +53,10 @@ source editor.">
 <td>Moves the insertion point one word to the left.</td> 
 </tr>
 <tr>
+<td valign="top">Ctrl-[</td>
+<td>Moves the insertion point to the highlighted matching bracket.</td>
+</tr>
+<tr>
 <td valign="top">Home</td>
 <td>Moves the insertion point to the beginning of the line.</td> 
 </tr>
@@ -198,6 +202,11 @@ document.</td>
 <tr>
 <td valign="top">Shift-PgDn</td>
 <td>Creates a text selection and extends it one page down.</td> 
+</tr>
+<tr>
+<td valign="top">Ctrl-Shift-[</td>
+<td>Selects the block between a pair of brackets. This shortcut only works 
+when insertion point is immediately after either the opening or closing bracket.</td>
 </tr>
 </table>
 
@@ -442,10 +451,6 @@ the insertion point is on.</td>
 <tr>
 <td valign="top">Ctrl-Shift-D</td>
 <td>Removes comment from the current or selected lines.</td>
-</tr>
-<tr>
-<td valign="top">Ctrl-[</td>
-<td>Finds matching bracket.</td>
 </tr>
 <tr>
 <td valign="top">Ctrl-Shift-[</td>
