Added info about help viewer shortcuts not configurable in the IDE.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/jhshortcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/jhshortcuts.html
@@ -18,7 +18,7 @@ The IDE uses the JavaHelp<sup><small>TM</small></sup>
 system help viewer to display the online help.
 Most of the features in the help
 viewer are accessible from the 
-keyboard.
+keyboard.  Help viewer shortcuts are not configurable in the IDE.
 </p>
 <p>
 When you first open the help viewer, keyboard focus is
