added spacing table to all See Also files

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/stylesheet.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/stylesheet.html
@@ -53,5 +53,9 @@ present the fonts and colors in the help pages.
 </table>
 <hr>
 <small><a href="../credits.html">Legal Notices</a></small>
-</body>
+<table border="0" cellpadding="150">
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+</table></body>
 </html>
