--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/system_settings.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/system_settings.html
@@ -156,5 +156,9 @@ for more information.
 </table>
 <hr>
 <small><a href="../credits.html">Legal Notices</a></small>
-</body>
+<table border="0" cellpadding="150">
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+</table></body>
 </html>
