--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/jhshortcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/jhshortcuts.html
@@ -185,6 +185,10 @@ is in the content pane or in the navigation pane.
 
 <hr>
 <small><a href="../credits.html">Legal Notices</a></small>
-</body>
+<table border="0" cellpadding="150">
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+</table></body>
 </html>
 
