--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts-setting.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts-setting.html
@@ -81,5 +81,8 @@ the selected action.</li>
 
 <hr>
 <small><a href="../credits.html">Legal Notices</a></small>
-
-</body>
+<table border="0" cellpadding="150">
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+</table></body>
