--- a/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/alternate_browser.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/alternate_browser.html
@@ -134,5 +134,9 @@ on where to start browsing the core help.
 </table>
 <hr>
 <small><a href="../credits.html">Legal Notices</a></small>
-</body>
+<table border="0" cellpadding="150">
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+</table></body>
 </html>
