--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/home_page.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/home_page.html
@@ -37,6 +37,9 @@ Select the System Settings node.
 </table>
 <hr>
 <small><a href="../credits.html">Legal Notices</a></small>
-
-</body>
+<table border="0" cellpadding="150">
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td></tr>
+</table></body>
 </html>
