--- a/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/stylesheet.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/stylesheet.html
@@ -12,6 +12,7 @@
 <BODY>
 
 <h2>Setting Font and Color for the Help Viewer</h2>
+<p><small><a href="#seealso">See Also</a></small></p>
 <p>
 You can customize the font and color properties that are used to 
 display the pages in the help viewer.  Font properties include
@@ -42,7 +43,7 @@ present the fonts and colors in the help pages.
 </ol>
 <table>
 <tr>
-<th colspan="2" align="left">See Also</th>
+<th colspan="2" align="left"><a name="seealso">See Also</a></th>
 </tr>
 <tr>
 <td width="23"></td>
