--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/home_page.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/home_page.html
@@ -12,7 +12,8 @@
 <BODY>
 
 <h2>Setting a Home Page for the Web Browser</h2>
-
+<p>
+<small><a href="#seealso">See Also</a></small></p>
 <ol>
 <li>From the main menu, choose Tools <img src ="../images/arrow.gif" alt="and choose">&nbsp;Options.
 </li>
@@ -25,7 +26,7 @@ Select the System Settings node.
 </ol>
 <table>
 <tr>
-<th colspan="2" align="left">See Also</th>
+<th colspan="2" align="left"><a name="seealso">See Also</a></th>
 </tr>
 <tr>
 <td width="23"></td>
