added -J-Dsun.java2d.noddraw=true switch to startup switch list

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_startup-switches.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_startup-switches.html
@@ -54,6 +54,14 @@ the IDE's user interface. If this option is not used, the font size is 11 points
       <p>You can determine the current user directory in the About dialog box. Choose Help 
 <img src="../images/arrow.gif" alt="and choose">&nbsp;About. Then click the 
 Detail Tab and look at the User Dir field.</p></blockquote>
+
+
+
+<tt>-J-Dsun.java2d.noddraw=true</tt>
+<blockquote>Prevents the use of DirectX for rendering. This switch may prevent
+problems that occur on some Micrososoft Windows systems with 
+faulty graphics cards.</blockquote>
+
 <tt>-J-Dnetbeans.debugger.jpda.transport=dt_shmem</tt> <i>userdir</i>
 <blockquote>Forces the IDE to use the shared memory connection when
 starting a debugging session with the Debug <img src="../images/arrow.gif" alt="and choose">&nbsp;Start command.  
