--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_startup-switches.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_startup-switches.html
@@ -58,7 +58,7 @@ Detail Tab and look at the User Dir field.</p></blockquote>
 
 
 <tt>-J-Dsun.java2d.noddraw=true</tt>
-<blockquote>Prevents the use of DirectX for rendering. This switch may prevent
+<blockquote>Prevents the use of DirectX for rendering. This switch might prevent
 problems that occur on some Micrososoft Windows systems with 
 faulty graphics cards.</blockquote>
 
