trivial grammatical polishing

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/editorcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/editorcuts.html
@@ -206,7 +206,7 @@ document.</td>
 <tr>
 <td valign="top">Ctrl-Shift-[</td>
 <td>Selects the block between a pair of brackets. This shortcut only works 
-when insertion point is immediately after either the opening or closing bracket.</td>
+when the insertion point is immediately after either the opening or closing bracket.</td>
 </tr>
 </table>
 
