correcting template description. Double-click no longer works to open the file in a web browser.

--- a/html/src/org/netbeans/modules/html/TemplateHelp.html
+++ b/html/src/org/netbeans/modules/html/TemplateHelp.html
@@ -14,5 +14,6 @@ Microsystems, Inc. All Rights Reserved.
 <HTML><BODY>
 Using this template you can create a new HTML file. You can then edit the file 
 in the IDE&#39;s built-in syntax-colored editor.
-Double-click its node to view it in the internal web browser.
+You can view the file in a web browser by right-clicking the file's node in the 
+ Explorer and choosing View.
 </BODY></HTML>
